feat: move to sbt native packager; fix: kafka offset commit;